--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "aws-sdk": "^2.953.0",
     "if-env": "^1.0.4",
+    "nodemon": "^2.0.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
