--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "create-bucket.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.954.0",
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "npm-watch": "^0.10.0"
+  },
+  "description": ""
 }
