--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.954.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "npm-watch": "^0.10.0"
   },
   "description": ""
